side profile likes

--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
                                 <li><a id="my_profile_friends_button" style="text-decoration:none;"> </a></li>
 
                                 <li><a id="my_profile_posts_button" style="text-decoration:none;"> </a></li>
-                                <!-- <li><a id="my_profile_likes_button" style="text-decoration:none;">     </a> </li>  -->
+                                <li><a id="my_profile_likes_button" style="text-decoration:none;">     </a> </li>
                             </ul>
                         </div>
                     </div>
